name:                resource-pool
version:             0.2.0.1
synopsis:            A high-performance striped resource pooling implementation
description:
  A high-performance striped pooling abstraction for managing
  flexibly-sized collections of resources such as database
  connections.

homepage:            http://github.com/mailrank/pool
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan <bos@mailrank.com>
maintainer:          Bryan O'Sullivan <bos@mailrank.com>
copyright:           Copyright 2011 MailRank, Inc.
category:            Data, Database, Network
build-type:          Simple
extra-source-files:
  README.markdown

cabal-version:       >=1.8

flag developer
  description: operate in developer mode
  default: False

library
  exposed-modules:     
    Data.Pool
  
  build-depends:       
    base == 4.*,
    hashable,
    monad-control >= 0.2.0.1,
    transformers,
    stm,
    time,
    vector >= 0.7

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all
    cpp-options: -DASSERTS -DDEBUG

  ghc-options: -Wall

source-repository head
  type:     git
  location: http://github.com/mailrank/pool

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/pool
