cabal-version:       2.4
build-type:          Simple
name:                resource-pool
version:             0.3.0.0
license:             BSD-3-Clause
license-file:        LICENSE
category:            Data, Database, Network
maintainer:          andrzej@rybczak.net
author:              Andrzej Rybczak, Bryan O'Sullivan

synopsis:            A high-performance striped resource pooling implementation

description: A high-performance striped pooling abstraction for managing
             flexibly-sized collections of resources such as database
             connections.

tested-with: GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2

extra-doc-files: CHANGELOG.md

bug-reports: https://github.com/scrive/pool/issues
source-repository head
  type:     git
  location: https://github.com/scrive/pool.git

library
  exposed-modules: Data.Pool
                   Data.Pool.Internal
                   Data.Pool.Introspection

  build-depends: base >= 4.11 && < 5
               , primitive >= 0.7
               , time

  ghc-options: -Wall -Wcompat

  default-language: Haskell2010

  default-extensions: DeriveGeneric
                    , LambdaCase
                    , RankNTypes
                    , TypeApplications
